<resources>
    <string name="app_name">Pedreirão</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="validation_required">Obrigatório</string>
    <string name="validation_password_confirmation">Confirmação diferente da senha</string>
    <string name="client_save_ok">Cadastro efetuado com sucesso</string>
    <string name="client_save_fail">Ocorreu um erro ao salvar o cliente</string>
    <string name="service_provider_save_ok">Cadastro efetuado com sucesso</string>
    <string name="service_provider_save_fail">Ocorreu um erro ao salvar o prestador de serviços</string>
    <string name="service_provider_service_type_required">Selecione um tipo de serviço</string>
    <string name="service_provider_areas_required">Adicione uma cidade</string>
    <string name="project_save_ok">Projeto cadastrado com sucesso</string>
    <string name="project_finished_ok">Projeto encerrado com sucesso</string>
    <string name="portfolio_required">Selecione ao menos uma imagem</string>
    <string name="image_upload_fail">Não foi possível carregar a imagem</string>
    <string name="title_activity_default_client">DefaultClientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_failure">Erro ao efeuar login</string>
    <string name="project_portfolio_image_delete_ok">Imagem removida do portfólio</string>
    <string name="project_portfolio_image_add_ok">Imagem adicionada ao portfólio</string>
    <string name="action_settings">Settings</string>
    <string name="service_provider_unavailable">Prestador de serviços indisponível para contratação</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu -->
    <string name="menu_my_projects">Meus Projetos</string>
    <string name="menu_search_service_provider">Buscar Prestador</string>
    <string name="menu_favorite_service_provider">Prestadores Favoritos</string>
    <string name="menu_evaluation">Avaliações Recebidas</string>
    <string name="menu_exit">Sair</string>

    <!-- Labels -->
    <string name="email">E-mail</string>
    <string name="phone">Telefone</string>
    <string name="zip_code">CEP</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="address">Endereço</string>
    <string name="evaluation">avaliação</string>
    <string name="evaluations">avaliações</string>
    <string name="experience_description">Experiência</string>
    <string name="service_types">Serviços prestados</string>
    <string name="occupation_areas">Áreas de atuação</string>
    <string name="portfolio">Portfólio</string>
    <string name="projects">Projetos</string>
    <string name="make_contract">Contratar</string>
    <string name="interested">Tenho interesse</string>
    <string name="project_data">Dados do projeto</string>
    <string name="use_my_address">Utilizar endereço residencial</string>
    <string name="client_evaluation">Avaliação do Cliente</string>
    <string name="what_you_need">Selecione o que você precisa</string>
    <string name="where_you_need">Região do serviço</string>
    <string name="use_my_address_search">Utilizar a cidade do seu endereço?</string>
    <string name="service_provider_availability">Disponibilidade do prestador</string>
    <string name="service_provider_available">Disponível para novos serviços?</string>
    <string name="minimun_qualification">Qualificação mínima</string>
    <string name="project_execution">Executor</string>
    <string name="project_hirer">Contratante</string>
    <string name="project_prevision">Previsão</string>
    <string name="project_description">Descrição</string>
    <string name="project_address">Endereço</string>
    <string name="project_qualification">Classifique o serviço prestado</string>
    <string name="project_qualification_sp">Classifique o cliente</string>
    <string name="project_qualification_description">Avalie o serviço prestado</string>
    <string name="project_client_evaluation">Avaliação recebida</string>
    <string name="project_service_provider_evaluation">Avaliação enviada</string>
    <string name="project_images_to_approve">Imagens para aprovação</string>
    <string name="project_portfolio">Portfólio do projeto</string>
    <string name="project_portfolio_approved">Aprovadas pelo cliente</string>
    <string name="update_data_success">Dados atualizados com sucesso</string>
    <string name="project_filter_all">Todos</string>
    <string name="project_filter_awaiting">Em espera</string>
    <string name="project_filter_execution">Execução</string>
    <string name="project_filter_finished">Concluído</string>
    <string name="project_filter_refused">Recusado</string>
    <string name="available">Disponível</string>
    <string name="unavailable">Indisponível</string>

    <!-- Service Failure -->
    <string name="service_project_fail">Falha ao executar ProjectService</string>
    <string name="service_client_fail">Falha ao executar ProjectService</string>
    <string name="service_service_provider_fail">Falha ao executar ProjectServiceProvider</string>
    <string name="service_city_fail">Falha ao executar CityService</string>
    <string name="service_favorite">Falha ao executar FavoriteService</string>

    <!-- Messages -->
    <string name="contract_make_ok">Solicitação de contratação efetuada com sucesso! Aguarde a aprovação do prestador de serviços.</string>

    <!-- Validation -->
    <string name="service_provider_services_required">O prestador deve estar vinculado a um tipo de serviço</string>
    <string name="service_provider_experience_description_required">Sua experiência deve ser descrita</string>
    <string name="search_city_required">A região do serviço deve ser informada</string>
    <string name="contract_range_dates">A data de término deve ser superior a data de início</string>

    <!-- Titles -->
    <string name="title_my_projects">Meus Projetos</string>
    <string name="title_project_detail">Detalhes do Projeto</string>
    <string name="title_service_provider_detail">Detalhes do Prestador</string>
    <string name="title_service_provider_evaluation">Avaliações do Prestador</string>
    <string name="title_service_provider_portfolio">Portfolio do Prestador</string>
    <string name="title_service_provider_projects">Projetos do Prestador</string>
    <string name="title_service_provider_project_detail">Detalhes do Projeto</string>
    <string name="title_make_contract">Contratar Prestador</string>
    <string name="title_finish_projetct">Finalização do Projeto</string>
    <string name="title_service_provider_search">Encontre um prestador</string>
    <string name="title_service_provider_search_result">Prestadores encontrados...</string>
    <string name="title_client_evaluation">Avaliações recebidas</string>
    <string name="title_client_detail">Meus dados</string>
    <string name="title_client_update">Atualização</string>
    <string name="title_client_perfil">Perfil</string>
    <string name="title_client_favorites">Prestadores Favoritos</string>
    <string name="title_service_provider_evaluations">Avaliações recebidas</string>
    <string name="title_service_provider_dashboard">Dashboard</string>
    <string name="title_service_provider_update">Atualização</string>
    <string name="title_service_provider_projects_list">Projetos</string>
    <string name="title_service_provider_client_details">Contratante</string>

    <!-- Button -->
    <string name="button_main_data">Perfil</string>
    <string name="button_services">Serviços prestados</string>
    <string name="button_occupation_areas">Áreas de atuação</string>
    <string name="button_portfolio">Portfólio</string>
    <string name="button_evaluations">Avaliações recebidas</string>
    <string name="button_projects">Projetos</string>

    <!-- Empty views -->
    <string name="empty_view_favorites">Nenhum prestador de serviços adicionado aos favoritos.</string>
    <string name="empty_view_search">Nenhum prestador de serviços encontrado na busca.</string>
    <string name="empty_view_client_evaluation">Nenhuma avaliação recebida.</string>
    <string name="empty_view_sp_evaluation">Nenhuma avaliação recebida.</string>
    <string name="empty_view_project">Nenhum projeto encontrado.</string>
    <string name="empty_view_client_sp_project">Nenhum projeto finalizado até o momento.</string>
</resources>
