<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.narlocks.delivery_service_app.activity.ClientSearchServiceProviderFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etServiceProviderName"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:inputType="text"
                android:hint="Nome do prestador" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/what_you_need"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    tools:layout_editor_absoluteY="24dp"
                    tools:layout_editor_absoluteX="0dp"
                    android:id="@+id/lvServiceTypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="32dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/where_you_need"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_my_address_search"
                android:id="@+id/cbUseMyAddress"
                android:layout_gravity="left|center_horizontal"
                android:checked="false"
                android:layout_margin="4dp" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/acCity"
                android:layout_margin="4dp"
                android:hint="Cidade"
                android:inputType="text"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/service_provider_availability"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_provider_available"
                android:id="@+id/cbAvailable"
                android:layout_gravity="left|center_horizontal"
                android:checked="false"
                android:layout_margin="4dp" />

            <Button
                android:text="Buscar"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:id="@+id/btSearch"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
