<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.narlocks.delivery_service_app.activity.ClientDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ivProfileImageDetail"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_gravity="top|center_horizontal"
                android:padding="4dp"
                android:src="@mipmap/ic_face_black_48dp"
                app:civ_border_color="@android:color/darker_gray"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:id="@+id/llStars"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/tvEvaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text=""
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="4dp"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="4dp"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="4dp"
                    android:text="@string/zip_code"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tvZipCode"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="4dp"
                    android:text="@string/state"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tvState"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="4dp"
                    android:text="@string/city"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="4dp"
                    android:text="@string/address"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/experience_description"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tvExperienceDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/service_types"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <ListView
                    android:id="@+id/lvServiceTypes"
                    android:layout_width="match_parent"
                    android:layout_height="110dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/occupation_areas"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <ListView
                    android:id="@+id/lvOccupationAreas"
                    android:layout_width="match_parent"
                    android:layout_height="110dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/llPortfolio">

                    <ImageView
                        android:id="@+id/ivPortfolio"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:foregroundGravity="center"
                        android:src="@mipmap/ic_photo_library_black_24dp" />

                    <TextView
                        android:id="@+id/tvPortfolio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/portfolio" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/llProjects">

                    <ImageView
                        android:id="@+id/ivProjects"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:foregroundGravity="center"
                        android:src="@mipmap/ic_developer_board_black_24dp" />

                    <TextView
                        android:id="@+id/tvProjects"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/projects" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/llMakeContract">

                    <ImageView
                        android:id="@+id/ivMakeContract"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:foregroundGravity="center"
                        android:src="@mipmap/ic_near_me_black_24dp" />

                    <TextView
                        android:id="@+id/tvMakeContract"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/make_contract" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/llIntrested">

                    <ImageView
                        android:id="@+id/ivInterested"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1.94"
                        android:foregroundGravity="center"
                        android:src="@mipmap/ic_star_border_black_24dp" />

                    <TextView
                        android:id="@+id/tvInterested"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/interested" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
